--- a/infographics.html
+++ b/infographics.html
@@ -40,10 +40,11 @@
             <a href="DB Design Process.pdf" target="_blank"><h2>Database Design Process</h2></a>
             <p>A description of the database design process, simplified for a 200-level college class.</p>
           </article>
-          <a href="Structured_Query_Language.pdf" target="_blank"><h2>Uses for SQL</h2></a>
-          <p>Relationship graphic made with Coggle to help students visualize data definition vs. data query vs. data manipulation vs. data control.</p>
-          <p>Students often think SQL (Structured Query Language) is only about querying data, so it's important to showcase other uses!</p>            
-        </article>
+          <article>
+            <a href="Structured_Query_Language.pdf" target="_blank"><h2>Uses for SQL</h2></a>
+            <p>Relationship graphic made with Coggle to help students visualize data definition vs. data query vs. data manipulation vs. data control.</p>
+            <p>Students often think SQL (Structured Query Language) is only about querying data, so it's important to showcase other uses!</p>            
+          </article>
       </main>
     </div>
     
