Adding CVD article

--- a/database-merge.html
+++ b/database-merge.html
@@ -37,8 +37,7 @@
         </nav>
     <main>
         <article>
-            <h1>SQL MERGE Command</h1>
-            <p>June 8, 2024</p>
+            <h2>Eric Cameron (ericcameron.dev), June 8, 2024</h2>
             <p>Most database classes teach you the main commands, SELECT-FROM-WHERE-GROUP BY-HAVING-ORDER BY, along with some basic data manipulation using INSERT, UPDATE, and DELETE.</p>
             <p>MERGE is seem less commonly, but it's a fantatic resource in a very specific situation. MERGE is part of the ANSI SQL standard, so this will work across DBMS.</p>
             <p>It is useful when you have one table and want to synchronize another table with it. Performance tends to be pretty good and should scale well. Combining into a single statement also simplifies the number of queries you need to track as an administrator.</p>
