--- a/writing.html
+++ b/writing.html
@@ -30,6 +30,11 @@
         </nav>
         <main>
           <article>
+            <a href="cvd.html"><h2>Addressing Color Vision Deficiency in Digital Content</h2></a>
+            <p>Written as an article discussing CVD in design.</p>
+            <p>Did you know 1/12 men have some sort of color vision deficiency? There are a few ways to ensure your design and documentation are compliant.</p>
+          </article>
+          <article>
             <a href="database-merge.html"><h2>SQL MERGE Command</h2></a>          
             <p>Written as an article demonstrating the use of the SQL MERGE command.</p>
             <p>When I've taught SQL, the MERGE command is one I don't remember ever getting around to teaching. It's not something you use every day, but there's a certain elegance to it.</p>
