--- a/database-merge.html
+++ b/database-merge.html
@@ -39,7 +39,7 @@
         <article>
             <h2>Eric Cameron (ericcameron.dev), June 8, 2024</h2>
             <p>Most database classes teach you the main commands, SELECT-FROM-WHERE-GROUP BY-HAVING-ORDER BY, along with some basic data manipulation using INSERT, UPDATE, and DELETE.</p>
-            <p>MERGE is seem less commonly, but it's a fantatic resource in a very specific situation. MERGE is part of the ANSI SQL standard, so this will work across DBMS.</p>
+            <p>MERGE is seem less commonly, but it's a fantastic resource in a very specific situation. MERGE is part of the 2003 ANSI SQL standard, so this will work across DBMS.</p>
             <p>It is useful when you have one table and want to synchronize another table with it. Performance tends to be pretty good and should scale well. Combining into a single statement also simplifies the number of queries you need to track as an administrator.</p>
             <p>I have provided some sample code <a href="merge.sql">here</a>, which includes the creation script for the two tables shown below.</p>
             <h2>MERGE syntax</h2>
