Missing word in CVD

--- a/cvd.html
+++ b/cvd.html
@@ -58,7 +58,7 @@
                 <li class="bold">Check Images for CVD Compatibility</li>Use a free online tool such as <a href="https://www.color-blindness.com/coblis-color-blindness-simulator" target="_blank">COBLIS (color blindness simulator)</a> to check images. 
                 <li class="bold">Choose Accessible Color Schemes</li>The <a href="https://webaim.org/resources/contrastchecker/" target="_blank">WebAIM contrast checker</a> will check if your colors pass the WCAG (Web Content Accessibility Guidelines) standards.
             </ul>
-            <p>Considering users with CVD and incorporating these suggestions into your site will create more accessible content.</p>
+            <p>Considering users with CVD and incorporating these suggestions into your site or design will create more accessible content.</p>
         </article>
     </main>
 </div>    
