--- a/cvd.html
+++ b/cvd.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ddressing Color Vision Deficiency in Digital Content</title>
+    <title>Addressing Color Vision Deficiency in Digital Content</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 
