--- a/cvd.html
+++ b/cvd.html
@@ -23,6 +23,15 @@
     </style>
 
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y76LMP8B28"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Y76LMP8B28');
+</script>
 <body>
     <div class="container">
         <header>
