Fix casing error

--- a/API_sample.html
+++ b/API_sample.html
@@ -43,7 +43,7 @@
         <h1>Sample API Documentation</h1>
         <p>This is a sample API documentation for a fictional workout builder application. Note that all of these requests will return a 404 error for the moment.</p>
         <h2>Postman Collection</h2>
-        <p>You can <a href="./workout_API_Postman.json">import this Postman collection</a> of the Workout Builder requests. If you have never imported a collection before, view the <a href="https://learning.postman.com/docs/designing-and-developing-your-api/importing-an-api/">Postman Import an API documentation</a> for assistance (it&#39;s short; 5 steps).</p>
+        <p>You can <a href="./workout_API_postman.json">import this Postman collection</a> of the Workout Builder requests. If you have never imported a collection before, view the <a href="https://learning.postman.com/docs/designing-and-developing-your-api/importing-an-api/">Postman Import an API documentation</a> for assistance (it&#39;s short; 5 steps).</p>
         <h2>Base URL</h2>
         <p>The following is the base URL for this exercise:
         <a href="http://www.example.com/api/v1">http://www.example.com/api/v1</a></p>
