We have dashboards now!

--- a/infographics.html
+++ b/infographics.html
@@ -28,7 +28,7 @@
 
     <div class="container">
         <header>
-            <h2>Welcome to Eric Cameron's Infographics Portfolio</h2>
+            <h2>Welcome to Eric Cameron's Infographics & Dashboard Portfolio</h2>
         </header>
         <nav id="nav-placeholder">
           <script>
@@ -40,6 +40,10 @@
 
         <main>
           <article>
+            <a href="https://app.powerbi.com/links/FM40sWL26S?ctid=19c0912c-bac4-4b2b-a24b-b0c026198e0f&pbi_source=linkShare" target="_blank"><h2>Power BI Grade Dashboard</h2></a>
+            <p>Power BI grade dashboard.</p>
+            <p>Concept for a grade dashboard that could be rolled out to faculty in an organization.</p>
+          </article>
           <article>
             <a href="Database Flows.png" target="_blank"><h2>Tables, Queries, Forms, and Reports</h2></a>
             <p>Infographic from my Exploring Access 2016 publication showing the relationship between tables, queries, forms, and reports.</p>
