--- a/infographics.html
+++ b/infographics.html
@@ -40,7 +40,7 @@
 
         <main>
           <article>
-            <a href="https://app.powerbi.com/links/FM40sWL26S?ctid=19c0912c-bac4-4b2b-a24b-b0c026198e0f&pbi_source=linkShare" target="_blank"><h2>Power BI Grade Dashboard</h2></a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiMmE5NWNkODUtMDEwOC00ZDViLWE4NWItM2NlYTE5MjdkNmUxIiwidCI6IjE5YzA5MTJjLWJhYzQtNGIyYi1hMjRiLWIwYzAyNjE5OGUwZiIsImMiOjJ9" target="_blank"><h2>Power BI Grade Dashboard</h2></a>
             <p>Power BI grade dashboard.</p>
             <p>Concept for a grade dashboard that could be rolled out to faculty in an organization.</p>
           </article>
