Altering page titles for Google Analytics; adding info to README for GitHub

--- a/workshops.html
+++ b/workshops.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio of Eric Cameron</title>
+    <title>Portfolio of Eric Cameron (Workshops)</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 
