Adding link to main GitHub portfolio and new MLB Day project

--- a/code.html
+++ b/code.html
@@ -40,10 +40,20 @@
 
         <main>
             <article>
+                <h2><a href="https://github.com/profcameron/" target="_blank">My GitHub</a></h2>
+                <p>Central repository for most of my various public projects.</p>
+                <p>Some highlights from GitHub are listed on this page.</p>
+            </article>
+            <article>
                 <h2><a href="https://github.com/profcameron/usernameCheck-openai" target="_blank">Username Check (OpenAI)</a></h2>
                 <p>Harnessing the power of OpenAI in a command-line Java program and the Spring framework to connect to OpenAI and check a username for appropriateness.</p>
                 <p>A more in-depth set of notes can be found in the project's README.</p>
             </article>
+            <article>
+                <h2><a href="https://github.com/profcameron/mlbday" target="_blank">Baseball Team Birthday Calendar Generator</a></h2>
+                <p>Java program pulling data from SportsData.io API and generating an .ICS file that can be imported into most calendar programs/sites.</p>
+                <p>Fun example of data migration.</p>
+              </article>
             <article>
                 <h2><a href="https://github.com/profcameron/cloudinary-vue" target="_blank">Cloudinary Vue Demo</a></h2>
                 <p>Using Cloudinary's API in a Vue front-end, showing component-based design.</p>
