--- a/code.html
+++ b/code.html
@@ -54,6 +54,11 @@
                 <p>Java program pulling data from SportsData.io API and generating an .ICS file that can be imported into most calendar programs/sites.</p>
                 <p>Fun example of data migration.</p>
               </article>
+              <article>
+                <h2><a href="https://github.com/profcameron/dataset-generator" target="_top">Generating Diverse Datasets</h2></a>
+                <p>A Python script I created to generate random data sets that include diverse names. Textbook databases too often are filled with names like John Smith.</p>
+                <p>Definitely could be expanded; I used ethnicities common to the area I taught.</p>
+              </article>
             <article>
                 <h2><a href="https://github.com/profcameron/cloudinary-vue" target="_blank">Cloudinary Vue Demo</a></h2>
                 <p>Using Cloudinary's API in a Vue front-end, showing component-based design.</p>
@@ -65,11 +70,6 @@
                 <p>I've ported it over to Google Sheets. My goal was to paste my roster and have everything generated for me.<br />
                    This strips the domain from the username, creates an account with the same username (using Windows authentication/single sign on), create a new schema for the user, grant them permissions, and populate it, and give read/execute access to common databases. There are a few other tabs to clean up student accounts at the end of the semester and refresh instructor and tutor accounts.<br />
                    Basically, it's a great way to use Excel's string manipulation. </p> 
-              </article>
-              <article>
-                <h2><a href="generateDataset.py" target="_top">Generating Diverse Datasets</h2></a>
-                <p>A Python script I created to generate random data sets that include diverse names. Textbook databases too often are filled with names like John Smith.</p>
-                <p>There are a few data files that go with this that will prevent this from running but you can see my logic!</p>
               </article>
         </main>
     </div>
