Updating file capitalization

--- a/writing.html
+++ b/writing.html
@@ -54,7 +54,7 @@
             <p>Documentation with sample code and explanation for ways to create a CHAR field that starts with the letter C, ends with the value from an INT field, and fills in the values in the middle with zero to create a constant, 6 character result.</p>            
           </article>
           <article>
-            <a href="API_Sample.html"><h2>Sample API Documentation</h2></a>          
+            <a href="API_sample.html"><h2>Sample API Documentation</h2></a>          
             <p>Example of API Documentation.</p>
             <p>Documentation for a fake workout builder application. Includes documenting three possible endpoints with a path, a path variable, and filter.</p>            
           </article>
