Update headshot; consolidate contact into home page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio of Eric Cameron (Home)</title>
+    <title>Contact Me</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 
@@ -12,9 +12,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
     <link rel="manifest" href="/favicon/site.webmanifest">
-
+    
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y76LMP8B28"></script>
     <script>
@@ -23,14 +22,13 @@
     gtag('js', new Date());
 
     gtag('config', 'G-Y76LMP8B28');
-    </script>
-
+</script>
 </head>
 <body>
 
-    <div class="container" onload="showContent()">
+    <div class="container">
         <header>
-            <h2>Welcome to Eric Cameron's Portfolio</h2>
+            <h2>About Eric</h2>
         </header>
         <nav id="nav-placeholder">
             <script>
@@ -39,11 +37,24 @@
                 });
             </script>
         </nav>
-        <main>
-            <p>Welcome! You've reached the portfolio of Eric Cameron, I am a programmer, educator, and writer.</p>
-            <p>Please visit the links above to visit the subsections of my portfolio.</p>
-        </main>
     </div>
+
+    <section class="contact-hero">
+        <div class="hero-text">
+            <h1>Let's Connect</h1>
+            <p>I'm <strong>Eric Cameron</strong> - a versatile educator, developer, and instructional designer. Whether you're looking to collaborate, hire, or just say hi - I'd love to hear from you.</p>
+            <p>I'm available for consulting and project-based work in <strong>technical writing</strong>, <strong>instructional design</strong>, <strong>developer education</strong>, <strong>speaking engagements</strong>, and <strong>software development</strong>.</p>
+
+            <p>I have a Master's Degree in Computer Science, and over 20 years of experience as a professor in Computer and Information Sciences. I've authored textbooks and designed instructional materials for leading organizations including <strong>Pearson</strong> and <strong>Coursera</strong>. I've also delivered technical documentation and training solutions for clients, presented at conferences, and worked as a software developer.</p>                
+            <p><a href="https://www.linkedin.com/in/ericcameron">LinkedIn</a></p>
+            <p><a href="mailto:info@ericcameron.dev">info@ericcameron.dev</a></p>
+            <p><a href="https://www.youtube.com/c/ericcameron">YouTube Channel</a></p>
+        </div>
+
+        <div class="hero-image">
+            <img src="headshot.jpg" alt="Eric Cameron's Headshot" class="headshot">
+        </div>
+    </section>
     
 </body>
 </html>
