--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
             <p>I'm available for consulting and project-based work in <strong>technical writing</strong>, <strong>instructional design</strong>, <strong>developer education</strong>, <strong>speaking engagements</strong>, and <strong>software development</strong>.</p>
 
             <p>I have a Master's Degree in Computer Science, and over 20 years of experience as a professor in Computer and Information Sciences. I've authored textbooks and designed instructional materials for leading organizations including <strong>Pearson</strong> and <strong>Coursera</strong>. I've also delivered technical documentation and training solutions for clients, presented at conferences, and worked as a software developer.</p>                
-            <p><a href="https://www.linkedin.com/in/ericcameron">LinkedIn</a></p>
-            <p><a href="mailto:info@ericcameron.dev">info@ericcameron.dev</a></p>
-            <p><a href="https://www.youtube.com/c/ericcameron">YouTube Channel</a></p>
+            <p><a href="https://www.linkedin.com/in/ericcameron" class="btn">LinkedIn</a></p>
+            <p><a href="mailto:info@ericcameron.dev" class="btn">info@ericcameron.dev</a></p>
+            <p><a href="https://www.youtube.com/c/ericcameron" class="btn">YouTube Channel</a></p>
         </div>
 
         <div class="hero-image">
