Adding speaker portfolio page; reorder menu

--- a/navbar.html
+++ b/navbar.html
@@ -1,6 +1,7 @@
 
     <a href="index.html">Home</a>
-    <a href="code.html">Code Portfolio</a>
-    <a href="workshops.html">Technical Workshop Portfolio</a>
-    <a href="infographics.html">Infographics & Dashboard Portfolio</a>
+    <a href="speaking.html">Speaker Portfolio</a>
     <a href="writing.html">Writing Portfolio</a>
+    <a href="workshops.html">Technical Workshop Portfolio</a>
+    <a href="code.html">Code Portfolio</a>
+    <a href="infographics.html">Infographics & Dashboard Portfolio</a>
